<resources>
    <string name="app_name">OnTheProwl!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="sb_edit">Edit Mode</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="init_activity_title">InitialActivity</string>
    <string name="drawer_item_one">Team Info</string>
    <string name="drawer_item_two">Robot Specs</string>
    <string name="drawer_item_three">Settings</string>
    <string name="edit_add">Add team&#8230;</string>
    <string name="edit_delete_all">Delete All</string>
    <string name="edit_download">Download team list</string>
    <string name="header_team_info_one">- TEAM INFO -</string>
    <string name="header_team_info_two">- DRIVE SQUAD -</string>
    <string name="header_team_info_three">- HUMAN PLAYER -</string>
    <string name="team_name">Team Name</string>
    <string name="team_number">Team Number</string>
    <string name="team_location">Team Location</string>
    <string name="total_years">Total Years</string>
    <string name="notes">Notes</string>
    <string name="coach_mentor">Is coach a mentor?</string>
    <string name="driver_rate">Driver Experience:</string>
    <string name="hp_rate">Human Player Experience:</string>
    <string name="hp_question_one">Can load totes?</string>
    <string name="hp_question_two">Can load litter?</string>
    <string name="hp_question_three">Can throw litter?</string>
    <string name="drawer_item_four">Help</string>
    <string name="slide1_desc">Click on the Edit Button</string>
    <string name="slide2_desc">Add and edit teams through edit toolbar</string>
    <string name="slide3_desc">Before you begin, start by setting some preferences.</string>
    <string name="slide3_desc2">Thank you for already setting your preferences.</string>
    <string name="slide1_title">Using the app&#8230;</string>
    <string name="slide2_title">Adding teams&#8230;</string>
    <string name="slide3_title">Get started!</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
