<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_1"
            android:checked="true"
            android:title="@string/drawer_item_one"
            android:icon="@drawable/ic_format_list_numbered_white_24dp"/>
        <item
            android:id="@+id/navigation_item_2"
            android:title="@string/drawer_item_two"
            android:icon="@drawable/ic_developer_board_white_24dp"/>
        <item
            android:id="@+id/navigation_item_3"
            android:title="@string/drawer_item_three"
            android:icon="@drawable/ic_settings_white_24dp"/>
        <item
            android:id="@+id/navigation_item_4"
            android:title="@string/drawer_item_four"
            android:icon="@drawable/ic_help_white_24dp"/>
    </group>

</menu>