<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:layout_weight="10">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:layout_weight="3"
        android:fontFamily="sans-serif-thin"
        android:textColor="#ffffff"
        android:paddingRight="32dp"
        android:textSize="28sp"
        android:text="@string/slide3_title"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="5">

        <EditText
            android:id="@+id/tmNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/team_number"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:inputType="number"
            android:maxLength="4"/>

        <EditText
            android:id="@+id/tmName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/team_name"
            android:gravity="end"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"/>

        <Spinner
            android:id="@+id/spn_season"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="left"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#ffffff"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:textSize="16sp"
        android:text="@string/slide3_desc"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="64dp" />

</LinearLayout>
