<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="16dp"
                android:text="@string/header_team_info_one"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/txtTeamInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"/>

            <EditText
                android:id="@+id/edtLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_location"
                android:gravity="end"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/edtTotal"
                    android:hint="@string/total_years"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:maxLength="2"
                    android:inputType="number"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif-light"/>

                <Spinner
                    android:id="@+id/participate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:spinnerMode="dropdown"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif-light"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/award1"
                    android:layout_margin="5dp"
                    android:spinnerMode="dropdown"
                    android:fontFamily="sans-serif-light"/>

                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/year1"
                    android:layout_margin="5dp"
                    android:spinnerMode="dropdown"
                    android:fontFamily="sans-serif-light"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/award2"
                    android:layout_margin="5dp"
                    android:spinnerMode="dropdown"
                    android:fontFamily="sans-serif-light"/>

                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/year2"
                    android:layout_margin="5dp"
                    android:spinnerMode="dropdown"
                    android:fontFamily="sans-serif-light"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/award3"
                    android:layout_margin="5dp"
                    android:spinnerMode="dropdown"
                    android:fontFamily="sans-serif-light"/>

                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/year3"
                    android:layout_margin="5dp"
                    android:spinnerMode="dropdown"
                    android:fontFamily="sans-serif-light"/>

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/notes"
                android:hint="@string/notes"
                android:layout_margin="5dp"
                android:minLines="7"
                android:maxLines="9"
                android:gravity="end|center"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="16dp"
                android:text="@string/header_team_info_two"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:text="@string/coach_mentor"
                    android:textSize="22sp"
                    android:fontFamily="sans-serif-light"/>

                <Spinner
                    android:id="@+id/coachMentor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:spinnerMode="dropdown"
                    android:fontFamily="sans-serif-light"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/driver_rate"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:fontFamily="sans-serif-light"/>

                <RatingBar
                    android:id="@+id/driverRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:numStars="5"
                    android:stepSize="0.5"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/hp_rate"
                    android:textSize="18.5sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:fontFamily="sans-serif-light"/>

                <RatingBar
                    android:id="@+id/hpRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:numStars="5"
                    android:stepSize="0.5"/>

            </LinearLayout>

        </LinearLayout>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="16dp"
                android:text="@string/header_team_info_three"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:text="@string/hp_question_one"
                    android:textSize="22sp"
                    android:fontFamily="sans-serif-light"/>

                <Spinner
                    android:id="@+id/hpTote"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif-light"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:text="@string/hp_question_two"
                    android:textSize="22sp"
                    android:fontFamily="sans-serif-light"/>

                <Spinner
                    android:id="@+id/hpLitter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif-light"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:text="@string/hp_question_three"
                    android:textSize="22sp"
                    android:fontFamily="sans-serif-light"/>

                <Spinner
                    android:id="@+id/hpThrow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif-light"/>

            </LinearLayout>

        </LinearLayout>-->

    </LinearLayout>

</ScrollView>